# service-web

./: .gitignore  .gitpod.dockerfile  .gitpod.yml  Dockerfile  docker-compose.yml  feature.txt  pyproject.toml  req.txt  setup.py  sql comm.txt
app/: README.md  __init__.py  constants.py  crud.py  dockerback.txt  msgtest.py  pdf.py  req.txt  schemas.py  util.py
app/models/: __init__.py
app/static/: autosuggest.css  dashboard-styles.css  sidebar_style.css  styles.css
app/static/dashboard/css/: style.css
app/templates/: add_technician.html  admin_dashboard.html  check.html  chiplevel.html  chiplevel_add_task.html  customer_review.html  customer_works.html  customers.html  expenditure.html  instore.html  instore_add_task.html  instore_work_view.html  instorenew.html  instorenew_add.html  layout.html  login.html  onsite.html  onsite_task_download.html  onsite_task_view.html  onsite_work_view.html  onsitenew.html  onsitenew_add.html  order.html  partner_work_view.html  partners.html  quotation.html  sidebar_admin.html  sidebar_new_admin.html  sidebar_new_technician.html  sidebar_technician.html  tech_customer.html  tech_customers_works.html  tech_dashboard.html  tech_instore.html  tech_instore_add_task.html  tech_instore_work_view.html  tech_onsite.html  tech_onsite_task_view.html  tech_onsite_work_view.html  tech_onsitenew.html  (+8 more)
app/views/: __init__.py  admin.py  auth.py  instore.py  technician.py  whatsapp_msg.py  whatsmsg.py
